fixed on mobile navbar

--- a/src/styles/cmps/_navbar.scss
+++ b/src/styles/cmps/_navbar.scss
@@ -30,6 +30,9 @@
   }
 
   @include mobile {
+    display: flex;
+    justify-content: center;
+    width: 100%;
     bottom: 35%;
     position: absolute;
   }
